--- a/gradle.properties
+++ b/gradle.properties
@@ -13,12 +13,12 @@
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 #Tue Jan 16 15:17:15 GET 2018
-#systemProp.http.proxyPort=8080
-#systemProp.http.proxyUser=lb\\lasha.gabinashvili
-#systemProp.http.proxyPassword=Gabina1203\#
+systemProp.http.proxyPort=8080
+systemProp.http.proxyUser=lb\\lasha.gabinashvili
+systemProp.http.proxyPassword=Gabina1203\#
 org.gradle.jvmargs=-Xmx1536m
-#systemProp.https.proxyPassword=Gabina1203\#
-#systemProp.https.proxyHost=squid.lb.ge
-#systemProp.http.proxyHost=squid.lb.ge
-#systemProp.https.proxyPort=8080
-#systemProp.https.proxyUser=lb\\lasha.gabinashvili
+systemProp.https.proxyPassword=Gabina1203\#
+systemProp.https.proxyHost=squid.lb.ge
+systemProp.http.proxyHost=squid.lb.ge
+systemProp.https.proxyPort=8080
+systemProp.https.proxyUser=lb\\lasha.gabinashvili
