--- a/gradle.properties
+++ b/gradle.properties
@@ -12,12 +12,12 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
-#Tue Jan 16 15:17:15 GET 2018
+#Mon Jan 29 11:20:57 GET 2018
 systemProp.http.proxyPort=8080
 systemProp.http.proxyUser=lb\\lasha.gabinashvili
 systemProp.http.proxyPassword=Gabina1203\#
 org.gradle.jvmargs=-Xmx1536m
-systemProp.https.proxyPassword=Gabina1203\#
+systemProp.https.proxyPassword=Gabina1203\#\#
 systemProp.https.proxyHost=squid.lb.ge
 systemProp.http.proxyHost=squid.lb.ge
 systemProp.https.proxyPort=8080
